--- a/app.json
+++ b/app.json
@@ -22,6 +22,17 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "f39d3f94-d9c8-4186-be6e-3ddff20cce49"
+      }
+    },
+    "android": {
+      "package": "com.cyph89.boltexponativewind"
     }
   }
 }
