--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "expo-font": "~13.0.4",
     "expo-haptics": "^14.0.1",
     "expo-image-picker": "~16.0.6",
-    "expo-linear-gradient": "^14.0.2",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "^7.0.5",
     "expo-router": "~4.0.19",
     "expo-secure-store": "~14.0.1",
@@ -36,9 +36,9 @@
     "expo-system-ui": "^4.0.7",
     "expo-web-browser": "^14.0.2",
     "lucide-react-native": "^0.475.0",
-    "react": "18.3.1",
+    "react": "^18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "^0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
