--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bolt-expo-starter",
+  "name": "uzzap",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "private": true,
@@ -23,6 +23,7 @@
     "expo-blur": "^14.0.3",
     "expo-camera": "^16.0.18",
     "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.15",
     "expo-font": "~13.0.4",
     "expo-haptics": "^14.0.1",
     "expo-image-picker": "~16.0.6",
@@ -38,7 +39,7 @@
     "lucide-react-native": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "^0.76.7",
+    "react-native": "^0.76.8",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
@@ -48,8 +49,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5",
-    "zustand": "^4.5.0",
-    "expo-dev-client": "~5.0.15"
+    "zustand": "^4.5.0"
   },
   "expo": {
     "doctor": {
@@ -66,6 +66,8 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "~8.0.1",
     "typescript": "^5.3.3"
   }
 }
