--- a/eas.json
+++ b/eas.json
@@ -15,6 +15,9 @@
       "autoIncrement": true,
       "android": {
         "buildType": "apk"
+      },
+      "env": {
+        "EAS_SKIP_AUTO_FINGERPRINT": "1"
       }
     }
   },
