--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.0.14",
     "@shopify/flash-list": "1.7.3",
     "@supabase/supabase-js": "^2.49.3",
+    "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "expo": "~52.0.41",
     "expo-auth-session": "~6.0.3",
