--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5",
-    "zustand": "^4.5.0"
+    "zustand": "^4.5.0",
+    "expo-notifications": "~0.29.14"
   },
   "expo": {
     "doctor": {
