--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # dependencies
 node_modules/
 
+/android
+/ios
+
 # expo
 .expo/
 dist/
@@ -29,6 +32,7 @@ yarn-error.*
 
 # local env files
 .env*.local
+.env
 
 # typescript
 *.tsbuildinfo
