--- a/package.json
+++ b/package.json
@@ -15,36 +15,38 @@
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^14.0.2",
     "@lucide/lab": "^0.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@shopify/flash-list": "1.7.3",
-    "@supabase/supabase-js": "^2.49.3",
     "@supabase/storage-js": "^2.0.0",
+    "@supabase/supabase-js": "^2.49.3",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.41",
+    "expo": "~52.0.42",
     "expo-auth-session": "~6.0.3",
     "expo-blur": "^14.0.3",
     "expo-camera": "^16.0.18",
     "expo-constants": "~17.0.8",
-    "expo-dev-client": "~5.0.15",
+    "expo-dev-client": "~5.0.16",
     "expo-font": "~13.0.4",
     "expo-haptics": "^14.0.1",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "^7.0.5",
+    "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.19",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "^2.0.1",
     "expo-symbols": "^0.2.2",
-    "expo-system-ui": "^4.0.7",
+    "expo-system-ui": "~4.0.9",
     "expo-web-browser": "^14.0.2",
     "lucide-react-native": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.8",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
@@ -54,8 +56,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5",
-    "zustand": "^4.5.0",
-    "expo-notifications": "~0.29.14"
+    "zustand": "^4.5.0"
   },
   "expo": {
     "doctor": {
@@ -73,6 +74,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~8.0.1"
   }
