--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/ngrok": "^4.1.3",
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.4",
     "@lucide/lab": "^0.1.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "2.9.0",
@@ -47,7 +47,9 @@
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.8",
+    "react-native-emoji-selector": "^0.2.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-gifted-chat": "^2.8.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
