--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,6 @@ expo-env.d.ts
 
 # native
 *.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
 
 # metro
 .metro-health-check*
@@ -28,11 +23,29 @@ yarn-error.*
 
 # macos
 .DS_Store
-*.pem
 
 # local env files
 .env*.local
 .env
+.env.development
+.env.production
+.env.test
+
+# security
+*.pem
+*.key
+*.cert
+*.crt
+*.p12
+*.pfx
+*.keystore
+
+# logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # typescript
 *.tsbuildinfo
