--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "react": "^18.3.1",
     "react-native": "0.76.8",
     "react-native-emoji-selector": "^0.2.0",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-gifted-chat": "^2.8.1",
-    "react-native-reanimated": "^3.16.7",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.17.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-shimmer-placeholder": "^2.0.9",
+    "react-native-svg": "^15.8.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5"
@@ -53,6 +56,7 @@
     }
   },
   "devDependencies": {
+    "@types/node": "^20.11.28",
     "@types/react": "~18.3.12",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.57.0",
