--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "EXPO_NO_TELEMETRY=1 expo start",
+    "dev": "expo start",
+    "dev:no-telemetry": "set EXPO_NO_TELEMETRY=1 && expo start",
     "build:web": "expo export --platform web",
     "lint": "expo lint",
     "android": "expo run:android",
@@ -30,10 +31,10 @@
     "react": "^18.3.1",
     "react-native": "0.76.8",
     "react-native-emoji-selector": "^0.2.0",
-    "react-native-gesture-handler": "^2.25.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-gifted-chat": "^2.8.1",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-reanimated": "^3.17.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-shimmer-placeholder": "^2.0.9",
