--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "BuzzAp Messenger",
     "slug": "buzzap-messenger",
     "version": "1.2.0",
+    "newArchEnabled": true,
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
